* Improved all translations
* Improved iron bank texture (prod. Hummel009)
* Improved tool & weapon stats
* Improved prostitute names & skins
* Improved ranks

* Optimized and recoded all the westeros structures
* Optimized the performance penalty from loading large fellowships upon player login
* Optimized NPCs checking for players with their miniquests
* Optimized rendering code

* Fixed bug with essos children not spawning in houses
* Fixed bug with villages in the villages
* Fixed bug with unremovable fellowship users after changing their nickname
* Fixed bug with joining disbanded fellowships
* Fixed bug with not protected food near banner
* Fixed bug with farmers
* Fixed crash in Stepstones
* Fixed 5 minor bugs (thanks to Stalker Kir)
* Fixed 7 minor bugs (thanks to VVVIP2)
* Fixed bug with shields GUI
* Fixed bug with smithing
* Reduced quality of some too elite unrealistic shields

>>VERSION 17.6
+ Added full Ukrainian edition (lore, speech, names, quests: prod. DDPAT Knife Series)
+ Added full Turkish edition (lore, speech, names, quests: prod. Ness)

* Recoded all the flat biome system
* Reworked all the speechbank system
* Great Texture Update (armor sets, shields, capes and banners: prod. Hummel009)

+ Added rice and cucumbers
+ Added riders to natural spawn
+ Added Moribald Chester
+ Added 4 waypoints
+ Added new Jogos Nhai units
+ Added Jogos Nhai banner
+ Added new Hardhome
+ Added skirling pass as a hidden road in mountains
+ Added villages and houses for wildling, thenn and north hillmen
+ Added random corn plants spawning
+ Added random structures
+ Added Tugar Khan
+ Added Hojtbaatar waypoint
+ Added Jogos Nhai armor
+ Added Tugar Khan achievement
+ Added dark variants of scrap trader and thief

* Improved hillmen villages
* Improved essos structures
* Improved roads
* Improved guards: sync between Essos and Westeros
* Improved Yi Ti Roads
* Improved almost all biomes
* Improved summer islands' strscans
* Improved white walkers attack AI