@@ -1,5 +1,0 @@
-package got.common.entity.other;
-
-public interface GOTMobSpawnerCondition {
-	void setSpawningFromMobSpawner(boolean var1);
-}
