@@ -1,10 +1,7 @@
 package got.common.quest;
 
-import java.util.Random;
-
 import got.GOT;
 import got.common.GOTPlayerData;
-import got.common.entity.other.GOTEntityNPC;
 import got.common.faction.GOTFaction;
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.entity.player.EntityPlayer;
@@ -46,31 +43,4 @@ public class GOTMiniQuestKillFaction extends GOTMiniQuestKill {
 		super.writeToNBT(nbt);
 		nbt.setString("KillFaction", killFaction.codeName());
 	}
-
-	public static class QFKillFaction extends GOTMiniQuestKill.QFKill<GOTMiniQuestKillFaction> {
-		public GOTFaction killFaction;
-
-		public QFKillFaction(String name) {
-			super(name);
-		}
-
-		@Override
-		public GOTMiniQuestKillFaction createQuest(GOTEntityNPC npc, Random rand) {
-			GOTMiniQuestKillFaction quest = super.createQuest(npc, rand);
-			quest.killFaction = killFaction;
-			return quest;
-		}
-
-		@Override
-		public Class getQuestClass() {
-			return GOTMiniQuestKillFaction.class;
-		}
-
-		public QFKillFaction setKillFaction(GOTFaction faction, int min, int max) {
-			killFaction = faction;
-			setKillTarget(min, max);
-			return this;
-		}
-	}
-
 }
